# hydra-rag-hooks

./: .gitignore  DESIGN.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
codex-plugin/: .mcp.json  plugin.json
codex-plugin/hooks/: hooks.json
commands/: rag-toggle.md
debian/: changelog  control  copyright  hydra-rag-hooks-refresher.service  postinst  postrm  rules
docs/: index.html  robots.txt  sitemap.xml
hooks/: user-prompt-submit.template.json
lib/hydra_rag_hooks/: __init__.py  admin.py  auto_index.py  chunker.py  classifier.py  codex_hook.py  config.py  daemon.py  hook.py  indexer.py  mcp.py  mcp_register.py  migrate.py  paths.py  progress.py  registry.py  retrieval.py  runner.py  store.py  toggles.py  trigger.py  walker.py
lib/hydra_rag_hooks/cli/: __init__.py  _common.py  auto.py  doctor.py  forget.py  index.py  ls.py  query.py  refresher.py  share.py  status.py  tag.py  toggle.py
lib/hydra_rag_hooks/embedder/: __init__.py  fastembed_backend.py  http_backend.py  hydra_llm_backend.py
scripts/: build-deb.sh  get.sh
tests/: test_chunker.py  test_classifier.py  test_cli.py  test_codex_hook.py  test_config.py  test_hook.py  test_migrate.py  test_paths_and_embedder.py  test_runner_progress.py  test_toggles_and_mcp.py  test_trigger.py  test_v05_migration.py
